--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -13,41 +13,41 @@
 #### [ 北京出现抗议横幅事件 多角度视频图片曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844983.md)
 #### [ 缺席二十大？王岐山12日出访哈萨克(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018900.md)
 #### [ 北京四通桥挂横幅的人是谁 个人信息流出](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844816.md)
+#### [ 央视惊现罕见一幕专家：习近平以奇怪的方式被劫持(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019166.md)
 #### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845256.md)
 #### [ 北京挂反共标语勇士被捕 王丹：他是新坦克人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844777.md)
-#### [ 央视惊现罕见一幕专家：习近平以奇怪的方式被劫持(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019166.md)
 #### [ 【一线采访】北京惊现反党横幅 中共全网封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13844506.md)
 #### [ 北京挂横幅抗议者资料流出 “正在全国组织总罢课”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019093.md)
 #### [ “反党”横幅事件引震动 北京多家客运站停运](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845213.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
 #### [ 四通桥事件后胡锡进英文发推遭打脸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662175.md)
 #### [ 深圳清零封控居民受不了 上街抗议喊解封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019042.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 北京惊现反习标语 外媒竞相报导 中共解体已现前兆？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662052.md)
+#### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845578.md)
 #### [ 中共各派围绕中纪委书记人选角力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844330.md)
 #### [ 北京闹市抗议横幅 蔡霞：震动中共高层和习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845505.md)
-#### [ 上海市长夫人刘茶出殡 传为刘鹤同父异母妹妹(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018909.md)
-#### [ 北京四通桥横幅事件后 官方急聘“看桥员”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845237.md)
-#### [ 【拍案惊奇】习指示四通桥事件？中共史上罕见抗议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845577.md)
 #### [ 藉民意拉习下马？北京惊现巨幅 “彭勇士”背后之举不简单(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019158.md)
-#### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845578.md)
-#### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845578.md)
+#### [ 【拍案惊奇】习指示四通桥事件？中共史上罕见抗议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845577.md)
+#### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
+#### [ 北京四通桥横幅事件后 官方急聘“看桥员”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845237.md)
+#### [ 上海市长夫人刘茶出殡 传为刘鹤同父异母妹妹(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018909.md)
 #### [ 不满中共铁腕防疫 黄安飙骂大白差点被逮](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844860.md)
+#### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845578.md)
 #### [ 赵薇遭封杀一年多 突然更新IG动态引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844875.md)
 #### [ 影射赵乐际？二十大前专题片点名涉秦岭别墅案官员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018848.md)
-#### [ 【晚间新闻】北京现反共横幅 国际关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845252.md)
-#### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
 #### [ 亲信接连出事 王岐山外访发表捧习言论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845459.md)
+#### [ 【晚间新闻】北京现反共横幅 国际关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845252.md)
 #### [ 四通桥事件细节曝光 彭载舟扮成施工员挂横幅](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845625.md)
 #### [ 章天亮: 勇士拉横幅倒习 为何习近平四面树敌却仍能连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662361.md)
 #### [ 王岐山提前泄露二十大内情：确立习核心](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551254.md)
+#### [ 【秦鹏直播】北京四通桥维修闹剧 事件延烧世界](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845681.md)
+#### [ 突破二十大保安 北京四通桥挂巨幅男身分疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019124.md)
 #### [ 【热门话题】北京反共勇士身份曝光/王岐山泄二十大内情](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551268.md)
 #### [ 北京四通桥横幅事件后 官方急聘“看桥员”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845237.md)
 #### [ 中共执意清零 百姓无生计来源 直呼崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844738.md)
-#### [ 突破二十大保安 北京四通桥挂巨幅男身分疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019124.md)
+#### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845256.md)
 #### [ 牺牲自己唤醒大众 四通桥勇士能走多远](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103550904.md)
+#### [ 【远见快评】“孤勇者”海外发酵 甘肃曝灭口案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845659.md)
 #### [ 旧部重回中纪委 王岐山仍有政治影响力？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018838.md)
 #### [ 分析：七中全会或因动态清零爆内斗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844398.md)
-#### [ 商人蔡云峰自杀 曾举报甘肃公安厅前副厅长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844990.md)
-#### [ 北京反共标语引爆国际舆论：挑战中共 影响巨大](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551202.md)
-#### [ 孙春兰二十大退下 胡锦涛“人事总管”受关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551273.md)
