--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,53 +1,53 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
-#### [ 失宠于习近平？“之江新军”落选中央委员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019066.md)
-#### [ 中央军委换血过半“新军头”浮出水面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019076.md)
 #### [ 央视惊现罕见一幕专家：习近平以奇怪的方式被劫持(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019166.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
-#### [ 中共二十大 ：官员断层 习近平如何布局外交？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018994.md)
 #### [ 戳破习的皇帝梦？北京四通桥事件冲击二十大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019186.md)
-#### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
 #### [ 胡海峰赴京参加二十大 这回离升官不远了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019171.md)
-#### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 中央军委换血过半“新军头”浮出水面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019076.md)
 #### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
-#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
-#### [ 大局已定 七中全会公报强调“习核心”治绩斐然(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018939.md)
-#### [ 二十大前北京男巨幅抗议被抓 图集疯传 全网封杀(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019028.md)
-#### [ 【秦鹏直播】北京反共勇士 真实身份曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844713.md)
+#### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
+#### [ 失宠于习近平？“之江新军”落选中央委员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019066.md)
+#### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
 #### [ 藉民意拉习下马？北京惊现巨幅 “彭勇士”背后之举不简单(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019158.md)
-#### [ 北京出现抗议横幅事件 多角度视频图片曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844983.md)
-#### [ 总理接班人扑朔迷离 沧桑废太子“满血复活”？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018821.md)
-#### [ 北京四通桥挂横幅的人是谁 个人信息流出](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844816.md)
-#### [ 缺席二十大？王岐山12日出访哈萨克(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018900.md)
-#### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845256.md)
+#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845578.md)
-#### [ 北京挂横幅抗议者资料流出 “正在全国组织总罢课”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019093.md)
-#### [ 北京挂反共标语勇士被捕 王丹：他是新坦克人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844777.md)
-#### [ 【一线采访】北京惊现反党横幅 中共全网封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13844506.md)
 #### [ 中共开党外人士座谈会 习讲话为何口风大变？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845752.md)
 #### [ 分析：二十大后谁任总理仍是谜 有四个情景](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845664.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
-#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
 #### [ 【拍案惊奇】习指示四通桥事件？中共史上罕见抗议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845577.md)
 #### [ 胡锦涛之子胡海峰赴京开会 低调不看镜头](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845883.md)
-#### [ “反党”横幅事件引震动 北京多家客运站停运](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845213.md)
-#### [ 北京闹市抗议横幅 蔡霞：震动中共高层和习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845505.md)
 #### [ 【晚间新闻】20大前军队异动 北京午夜军车上街](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845997.md)
 #### [ 官媒曝孟晚舟获释内情 被指为二十大作宣传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845964.md)
-#### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845256.md)
 #### [ 四通桥事件细节曝光 彭载舟扮成施工员挂横幅](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845625.md)
 #### [ 章天亮: 勇士拉横幅倒习 为何习近平四面树敌却仍能连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662361.md)
 #### [ 分析：二十大后中共将推进“计划经济2.0”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845828.md)
-#### [ 北京四通桥横幅事件后 官方急聘“看桥员”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845237.md)
-#### [ 深圳清零封控居民受不了 上街抗议喊解封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019042.md)
-#### [ 四通桥事件后胡锡进英文发推遭打脸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662175.md)
+#### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845256.md)
 #### [ 传山东大学陪黑人留学生3个月的女生全部打胎(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019179.md)
 #### [ 【秦鹏直播】北京四通桥维修闹剧 事件延烧世界](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845681.md)
-#### [ 北京惊现反习标语 外媒竞相报导 中共解体已现前兆？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662052.md)
+#### [ 中共二十大 ：官员断层 习近平如何布局外交？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018994.md)
 #### [ 中共“千年大计”五年烂尾 雄安宣传秀引嘲讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845158.md)
 #### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845578.md)
-#### [ 中共各派围绕中纪委书记人选角力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13844330.md)
 #### [ 七中通报未提习两路线 专家析中共垮台天意](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13844995.md)
+#### [ 【远见快评】“孤勇者”海外发酵 甘肃曝灭口案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845659.md)
+#### [ 北京闹市抗议横幅 蔡霞：震动中共高层和习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845505.md)
+#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
+#### [ 北京四通桥事件 胡锡进发推表忠被骂翻](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845419.md)
+#### [ 胡锦涛之子胡海峰赴京参加二十大 仕途再引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551893.md)
+#### [ 北京挂横幅抗议者资料流出 “正在全国组织总罢课”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019093.md)
+#### [ 大局已定 七中全会公报强调“习核心”治绩斐然(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018939.md)
+#### [ “新坦克人”替民众发声 港媒沉默 美议员称赞 学者道破问题关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662385.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 北京挂横幅后当局连夜守桥 急聘“看桥员”遭讽(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019111.md)
+#### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845256.md)
+#### [ 王友群：中共贪官穷奢极欲之五大怪现象](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845720.md)
+#### [ 钟原：北京看守立交桥与长春看守电线杆](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845913.md)
+#### [ 专家：习连任对台非坏事 四亲信有望入常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662346.md)
+#### [ 二十大内斗激烈 官方再点名薄熙来等“十大老虎”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552132.md)
+#### [ 【江峰漫谈】习近平“顺利”接任的险恶前途](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845580.md)
+#### [ 组图：二十大前北京怪象 满城都是“看桥人”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551901.md)
+#### [ 二十大会期确定 习近平任选举小组长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552218.md)
+#### [ 中共封控“国家未来” 保二十大全国躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551980.md)
 #### [ 突破二十大保安 北京四通桥挂巨幅男身分疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019124.md)
-#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
-#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
-#### [ 上海市长夫人刘茶出殡 传为刘鹤同父异母妹妹(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018909.md)
+#### [ 中国新闻快报：北京坦克人事件发酵 海外发起联动声援](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551983.md)
+#### [ 中共“千年大计”五年烂尾 雄安宣传秀引嘲讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845158.md)
+#### [ 江峰: 为自由开道 四通勇士天下先 大潮将汹涌而至](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662358.md)
+#### [ 北京横幅事件后 四通桥加大警力监视路人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845795.md)
