--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -7,47 +7,47 @@
 #### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
 #### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
 #### [ 失宠于习近平？“之江新军”落选中央委员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019066.md)
-#### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
 #### [ 藉民意拉习下马？北京惊现巨幅 “彭勇士”背后之举不简单(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019158.md)
+#### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845578.md)
 #### [ 中共开党外人士座谈会 习讲话为何口风大变？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845752.md)
 #### [ 分析：二十大后谁任总理仍是谜 有四个情景](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845664.md)
-#### [ 【拍案惊奇】习指示四通桥事件？中共史上罕见抗议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845577.md)
 #### [ 胡锦涛之子胡海峰赴京开会 低调不看镜头](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845883.md)
+#### [ 【拍案惊奇】习指示四通桥事件？中共史上罕见抗议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845577.md)
 #### [ 【晚间新闻】20大前军队异动 北京午夜军车上街](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845997.md)
 #### [ 官媒曝孟晚舟获释内情 被指为二十大作宣传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845964.md)
-#### [ 四通桥事件细节曝光 彭载舟扮成施工员挂横幅](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845625.md)
 #### [ 章天亮: 勇士拉横幅倒习 为何习近平四面树敌却仍能连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662361.md)
+#### [ 四通桥事件细节曝光 彭载舟扮成施工员挂横幅](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845625.md)
+#### [ 传山东大学陪黑人留学生3个月的女生全部打胎(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019179.md)
 #### [ 分析：二十大后中共将推进“计划经济2.0”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845828.md)
 #### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845256.md)
-#### [ 传山东大学陪黑人留学生3个月的女生全部打胎(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019179.md)
 #### [ 【秦鹏直播】北京四通桥维修闹剧 事件延烧世界](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845681.md)
-#### [ 中共二十大 ：官员断层 习近平如何布局外交？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018994.md)
 #### [ 中共“千年大计”五年烂尾 雄安宣传秀引嘲讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845158.md)
+#### [ 中共二十大 ：官员断层 习近平如何布局外交？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018994.md)
 #### [ 四通桥事件 北京等词遭审查 网民机智应对](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845578.md)
 #### [ 七中通报未提习两路线 专家析中共垮台天意](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13844995.md)
 #### [ 【远见快评】“孤勇者”海外发酵 甘肃曝灭口案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845659.md)
-#### [ 北京闹市抗议横幅 蔡霞：震动中共高层和习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845505.md)
 #### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
-#### [ 北京四通桥事件 胡锡进发推表忠被骂翻](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845419.md)
+#### [ 北京闹市抗议横幅 蔡霞：震动中共高层和习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845505.md)
 #### [ 胡锦涛之子胡海峰赴京参加二十大 仕途再引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551893.md)
+#### [ 北京四通桥事件 胡锡进发推表忠被骂翻](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845419.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 北京挂横幅抗议者资料流出 “正在全国组织总罢课”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019093.md)
 #### [ 大局已定 七中全会公报强调“习核心”治绩斐然(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018939.md)
-#### [ “新坦克人”替民众发声 港媒沉默 美议员称赞 学者道破问题关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662385.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
-#### [ 北京挂横幅后当局连夜守桥 急聘“看桥员”遭讽(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019111.md)
 #### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845256.md)
-#### [ 王友群：中共贪官穷奢极欲之五大怪现象](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845720.md)
+#### [ 北京挂横幅后当局连夜守桥 急聘“看桥员”遭讽(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019111.md)
+#### [ “新坦克人”替民众发声 港媒沉默 美议员称赞 学者道破问题关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662385.md)
 #### [ 钟原：北京看守立交桥与长春看守电线杆](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845913.md)
-#### [ 专家：习连任对台非坏事 四亲信有望入常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662346.md)
+#### [ 二十大会期确定 习近平任选举小组长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552218.md)
+#### [ 王友群：中共贪官穷奢极欲之五大怪现象](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845720.md)
 #### [ 二十大内斗激烈 官方再点名薄熙来等“十大老虎”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552132.md)
 #### [ 【江峰漫谈】习近平“顺利”接任的险恶前途](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845580.md)
-#### [ 组图：二十大前北京怪象 满城都是“看桥人”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551901.md)
-#### [ 二十大会期确定 习近平任选举小组长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552218.md)
-#### [ 中共封控“国家未来” 保二十大全国躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551980.md)
+#### [ 专家：习连任对台非坏事 四亲信有望入常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662346.md)
+#### [ 【文昭谈古论今】北京四通桥巨震 极权的终点？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846158.md)
 #### [ 突破二十大保安 北京四通桥挂巨幅男身分疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019124.md)
+#### [ 中共封控“国家未来” 保二十大全国躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551980.md)
+#### [ 组图：二十大前北京怪象 满城都是“看桥人”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551901.md)
+#### [ 前有乐玉成被弃 习近平会为王毅“破八”吗？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662499.md)
 #### [ 中国新闻快报：北京坦克人事件发酵 海外发起联动声援](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551983.md)
-#### [ 中共“千年大计”五年烂尾 雄安宣传秀引嘲讽](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845158.md)
-#### [ 江峰: 为自由开道 四通勇士天下先 大潮将汹涌而至](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662358.md)
-#### [ 北京横幅事件后 四通桥加大警力监视路人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845795.md)
+#### [ 客车停运 看桥员上岗 横幅事件震动中共高层](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551814.md)
