同步于: 10月16日2时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -4,8 +4,8 @@
 #### [ 胡海峰赴京参加二十大 这回离升官不远了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019171.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 中央军委换血过半“新军头”浮出水面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019076.md)
-#### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
 #### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
+#### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
 #### [ 失宠于习近平？“之江新军”落选中央委员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019066.md)
 #### [ 藉民意拉习下马？北京惊现巨幅 “彭勇士”背后之举不简单(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019158.md)
 #### [ 十年间 习近平是如何巩固与积累权力的(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018931.md)
@@ -36,11 +36,11 @@
 #### [ 北京挂横幅抗议者资料流出 “正在全国组织总罢课”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019093.md)
 #### [ 钟原：北京看守立交桥与长春看守电线杆](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845913.md)
 #### [ 大局已定 七中全会公报强调“习核心”治绩斐然(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018939.md)
+#### [ 二十大会期确定 习近平任选举小组长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552218.md)
 #### [ 北京四通桥事件冲击二十大政局 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845256.md)
 #### [ 二十大内斗激烈 官方再点名薄熙来等“十大老虎”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552132.md)
 #### [ 北京挂横幅后当局连夜守桥 急聘“看桥员”遭讽(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019111.md)
 #### [ “新坦克人”替民众发声 港媒沉默 美议员称赞 学者道破问题关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662385.md)
-#### [ 二十大会期确定 习近平任选举小组长](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552218.md)
 #### [ 王友群：中共贪官穷奢极欲之五大怪现象](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845720.md)
 #### [ 突破二十大保安 北京四通桥挂巨幅男身分疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019124.md)
 #### [ 【文昭谈古论今】北京四通桥巨震 极权的终点？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846158.md)
@@ -48,6 +48,6 @@
 #### [ 专家：习连任对台非坏事 四亲信有望入常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662346.md)
 #### [ 中共封控“国家未来” 保二十大全国躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551980.md)
 #### [ 组图：二十大前北京怪象 满城都是“看桥人”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551901.md)
+#### [ 中共政治局半数换血 台媒预测新晋人员名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552256.md)
 #### [ 反共檄文全球震荡 中国人能造反吗？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662586.md)
 #### [ 前有乐玉成被弃 习近平会为王毅“破八”吗？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662499.md)
-#### [ 中国新闻快报：北京坦克人事件发酵 海外发起联动声援](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551983.md)
