--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -47,7 +47,7 @@
 #### [ 【江峰漫谈】习近平“顺利”接任的险恶前途](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845580.md)
 #### [ 专家：习连任对台非坏事 四亲信有望入常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662346.md)
 #### [ 中共封控“国家未来” 保二十大全国躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551980.md)
+#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 中共政治局半数换血 台媒预测新晋人员名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552256.md)
 #### [ 组图：二十大前北京怪象 满城都是“看桥人”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103551901.md)
-#### [ 反共檄文全球震荡 中国人能造反吗？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662586.md)
