--- a/pages/prog202/a103552881.md
+++ b/pages/prog202/a103552881.md
@@ -1,4 +1,4 @@
-### 【中国禁闻】9月19日完整版
+### 【环球直击】10月16日完整版（2）
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,27 +7,27 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2022年09月19日讯】贵州
-  <ok href="https://www.ntdtv.com/gb/隔离大巴翻车.htm">
-   隔离大巴翻车
+  【新唐人北京时间2022年10月16日讯】
+  <ok href="https://www.ntdtv.com/gb/二十大.htm">
+   二十大
   </ok>
-  民众: 我们都在车上；
-  <ok href="https://www.ntdtv.com/gb/军机频繁扰台.htm">
-   军机频繁扰台
+  在危机中召开 习近平强调政治安全；
+  <ok href="https://www.ntdtv.com/gb/英国新任财相.htm">
+   英国新任财相
   </ok>
-  专家：
-  <ok href="https://www.ntdtv.com/gb/中共.htm">
-   中共
+  亨特 捍卫经济政策急转向；“
+  <ok href="https://www.ntdtv.com/gb/日台交流峰会.htm">
+   日台交流峰会
   </ok>
-  须付巨大成本；
-  <ok href="https://www.ntdtv.com/gb/国际心肺移植学会.htm">
-   国际心肺移植学会
+  ”促日助台同卫印太和平；《
+  <ok href="https://www.ntdtv.com/gb/长春.htm">
+   长春
   </ok>
-  禁
-  <ok href="https://www.ntdtv.com/gb/中国器官移植论文.htm">
-   中国器官移植论文
+  》
+  <ok href="https://www.ntdtv.com/gb/纽约曼哈顿上映.htm">
+   纽约曼哈顿上映
   </ok>
-  。
+  一连7天 观众见面会爆满。
  </p>
  <div class="single_ad">
  </div>
@@ -35,13 +35,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103531884.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103531884.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103531884.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2022/09/19/a103531884.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103552881.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103552881.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a103552881.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2022/10/16/a103552881.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103531884.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a103552881.md' width='0px' height='0px'/>
